--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- info about my website -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Animals</title>
+  <!-- links to external files like css and js -->
+ <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <header>
@@ -22,24 +25,24 @@
 </nav>
 </header>
 <main>
-<section>
+<section id="first">
  <h3> welcome every one</h3>
- <p>Animals are our companions, our workers, our eyes and ears, and our food. They appear in ancient cave paintings, and on modern commercial farms. We have domesticated some of them, while others remain wild and are sometimes endangered by our activities. They keep us company, and while they can provide comic relief, they also serve us as valuable assistants</p>
+ <p id=main>Animals are our companions, our workers, our eyes and ears, and our food. They appear in ancient cave paintings, and on modern commercial farms. We have domesticated some of them, while others remain wild and are sometimes endangered by our activities. They keep us company, and while they can provide comic relief, they also serve us as valuable assistants</p>
 </section>
-<section>
-  <div>
+<section id="second">
+  <div class="imgContainer">
     <h4>tigers
 
     </h4>
     <img src="tiger.jpg" width="200px" height="200px">
     </div>
-  <div>
+  <div class="imgContainer">
    <h4>black lion
 
    </h4>
     <img src="lion.jpg" width="200px" height="200px" >
     </div>
-  <div>
+  <div class="imgContainer">
 
     <h4>jaguar
 
@@ -47,7 +50,7 @@
    <img src="jaguar.jpg" width="200px" height="200px">
     </div>
     </section>
-<section>
+<section id="third">
   <p> What's Wild?
 A wild animal is an animal that is, well, wild. This means that it isn't tame and it lives on its own without any help from people. A wild animal finds its own food, shelter, water and all its other needs in a specific natural habitat. Habitat can be a field, woods, pond, wetland, prairie, park, or your yard. Wild animals make their home in both the city and the country. Wildlife includes small critters that you can only see through a microscope to animals as large as whales! (Although, you won't find any whales in Wisconsin.)
 
@@ -55,8 +58,8 @@ A wild animal is an animal that is, well, wild. This means that it isn't tame an
 </section>
 </main>
 
-<footer>
- <h5> copy right</h5>
+<footer id="footerP">
+ &copy; naziha qawasmeh 2021
  <h5> email adress</h5>
 </footer>
 
