--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <header>
-<img src="nnn.jpg"  width="100px" height="100px">
+<img src="nnn.jpg" width="200px" height="100px">
 
 <h1> wild animals</h1>
 <nav>
@@ -27,7 +27,7 @@
 <main>
 <section id="first">
  <h3> welcome every one</h3>
- <p id=main>Animals are our companions, our workers, our eyes and ears, and our food. They appear in ancient cave paintings, and on modern commercial farms. We have domesticated some of them, while others remain wild and are sometimes endangered by our activities. They keep us company, and while they can provide comic relief, they also serve us as valuable assistants</p>
+ <p>Animals are our companions, our workers, our eyes and ears, and our food. They appear in ancient cave paintings, and on modern commercial farms. We have domesticated some of them, while others remain wild and are sometimes endangered by our activities. They keep us company, and while they can provide comic relief, they also serve us as valuable assistants</p>
 </section>
 <section id="second">
   <div class="imgContainer">
@@ -58,12 +58,9 @@ A wild animal is an animal that is, well, wild. This means that it isn't tame an
 </section>
 </main>
 
-<footer id="footerP">
- &copy; naziha qawasmeh 2021
- <h5> email adress</h5>
-</footer>
+<footer>
+  <p id="footerP"> &copy; Naziha qawasmeh 2021 </p>
+	</footer>
 
-  
 </body>
-
 </html>
