--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <h1> wild animals</h1>
 <nav>
   <ul>
-    <li><a href="https://www.eekwi.org/animals/leave-wild-animals-wild"> about us</a></li>
+    <li><a href="aboutus.html/"> about us</a></li>
     </li>
     <li><a href="http://www.animalplanet.com/wild-animals/">contact us</a></li>
     <li><a href="https://www.schleich-s.com/en/US/wild-life.html">related link</a></li> 
@@ -61,6 +61,6 @@ A wild animal is an animal that is, well, wild. This means that it isn't tame an
 <footer>
   <p id="footerP"> &copy; Naziha qawasmeh 2021 </p>
 	</footer>
-
+<script src="script.js"></script>
 </body>
 </html>
